# litigiosvisa-cf

./: AGENTS.md  README.md  SYSTEM_PROMPT.md  demo.py  main.py  pyproject.toml
data/: dispute.db  visa_cases.db
disputes/: dispute_one.md
documentation/: ProyectoFinal-JCRamos.mkd
src/litigiosVisa/: database.py  dispute_data.py  server.py
