[project]
name = "litigiosvisav2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0.0",
    "chromadb>=0.4.0",
    "sqlalchemy>=2.0.0",
    "pdfplumber>=0.10.0",
    "polars>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
visa-dispute = "litigiosVisa.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litigiosVisa"]
